Create new subject dialog added

--- a/app/src/main/res/values-ru-rKZ/strings.xml
+++ b/app/src/main/res/values-ru-rKZ/strings.xml
@@ -15,4 +15,7 @@
     <string name="add_new_subject">Добавить новый предмет</string>
     <string name="subjects">Предметы</string>
     <string name="show_password">Показать пароль</string>
+    <string name="creating_a_subject">Создание предмета</string>
+    <string name="come_up_with_a_title">Придумайте название</string>
+    <string name="create">Создать</string>
 </resources>
