Login and registration features are included

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="daily_question">Daily Question</string>
 
     <string name="oops_this_is_wrong">OOPS… THIS IS WRONG</string>
+    <string name="edit">Edit</string>
 </resources>
