--- a/app/src/main/res/values-ru-rKZ/strings.xml
+++ b/app/src/main/res/values-ru-rKZ/strings.xml
@@ -20,4 +20,5 @@
     <string name="create">Создать</string>
     <string name="daily_question">Ежедневный вопрос</string>
     <string name="oops_this_is_wrong">УУПС… ОТВЕТ НЕВЕРНЫЙ</string>
+    <string name="edit">Редактировать</string>
 </resources>
